# dult-tracker-detector

./: .gitignore  LICENSE  README.md
detector-app/DULTDetector/: BLEScanner.swift  CoTravelDetector.swift  CoTravelMLModel.swift  ContentView.swift  DULTDetector.entitlements  DULTDetectorApp.swift  DatabaseManager.swift  DeviceCardView.swift  DiscoveredDevice.swift  LocationProvider.swift  test_vectors.json
detector-app/DULTDetector.xcodeproj/: project.pbxproj
detector-app/DULTDetector/cotravel.coreaiasset/: main.hash  main.mlirb
docs/: dult-spec.txt
emulator-android/: README.md  settings.gradle.kts
emulator-android/app/: build.gradle.kts
emulator-android/app/src/main/: AndroidManifest.xml
emulator-android/app/src/main/java/edu/usc/rklala/dultemulator/: MainActivity.kt
emulator-android/app/src/main/res/layout/: activity_main.xml
emulator-android/app/src/main/res/values/: strings.xml
ml-pipeline/: evaluate_baseline.py  export_model.py  generate_data.py  pyproject.toml  train.py
